[gd_scene load_steps=11 format=2]

[ext_resource path="res://addons/posepal/interface/RectHandlerContainer.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/posepal/interface/Titlebar.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/posepal/assets/icons/icon_new.png" type="Texture" id=3]
[ext_resource path="res://addons/posepal/interface/ResizableWindow.gd" type="Script" id=4]
[ext_resource path="res://addons/posepal/assets/LipsyncImporterTheme.tres" type="Theme" id=5]
[ext_resource path="res://addons/posepal/new_pose_popup/NewPosePopup.gd" type="Script" id=6]
[ext_resource path="res://addons/posepal/new_pose_popup/DoneButton.gd" type="Script" id=7]
[ext_resource path="res://addons/posepal/new_pose_popup/TreeDisplay.gd" type="Script" id=9]
[ext_resource path="res://addons/posepal/new_pose_popup/TabContainer.gd" type="Script" id=10]
[ext_resource path="res://addons/posepal/new_pose_popup/property_display/PropertyDisplay.gd" type="Script" id=12]

[node name="NewPosePopup" type="Popup"]
visible = true
margin_right = 418.0
margin_bottom = 460.0
rect_min_size = Vector2( 182, 162 )
theme = ExtResource( 5 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 180, 160 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 20.0
margin_right = -10.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleBar" parent="Panel/VBox" instance=ExtResource( 2 )]
margin_right = 398.0
title_name = "New Pose: x"
icon_texture = ExtResource( 3 )
window_path = NodePath("../../..")

[node name="TabContainer" type="TabContainer" parent="Panel/VBox"]
margin_top = 44.0
margin_right = 398.0
margin_bottom = 396.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0
script = ExtResource( 10 )

[node name="Nodes" type="ScrollContainer" parent="Panel/VBox/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TreeDisplay" type="VBoxContainer" parent="Panel/VBox/TabContainer/Nodes"]
margin_right = 398.0
margin_bottom = 328.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 9 )

[node name="Properties" type="ScrollContainer" parent="Panel/VBox/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PropertyDisplay" type="VBoxContainer" parent="Panel/VBox/TabContainer/Properties"]
margin_right = 398.0
margin_bottom = 328.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 12 )

[node name="ButtonHBox" type="HBoxContainer" parent="Panel/VBox"]
margin_top = 400.0
margin_right = 398.0
margin_bottom = 420.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DoneButton" type="Button" parent="Panel/VBox/ButtonHBox"]
margin_right = 46.0
margin_bottom = 20.0
rect_min_size = Vector2( 46, 0 )
size_flags_horizontal = 2
text = "Done"
script = ExtResource( 7 )

[node name="RectHandlerContainer" parent="." instance=ExtResource( 1 )]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
_windowRect = NodePath("..")
debug_mode = false

[node name="HandlerTop" parent="RectHandlerContainer" index="0"]
margin_right = 418.0
handler_direction = 0
debug_mode = false
_windowRect = NodePath("../..")

[node name="HandlerBottom" parent="RectHandlerContainer" index="1"]
margin_top = 450.0
margin_right = 418.0
margin_bottom = 460.0
debug_mode = false
_windowRect = NodePath("../..")

[node name="HandlerLeft" parent="RectHandlerContainer" index="2"]
margin_bottom = 460.0
debug_mode = false
_windowRect = NodePath("../..")

[node name="HandlerRight" parent="RectHandlerContainer" index="3"]
margin_left = 408.0
margin_right = 418.0
margin_bottom = 460.0
debug_mode = false
_windowRect = NodePath("../..")

[editable path="RectHandlerContainer"]
